Updated after 4/30 class