@@ -83,3 +83,16 @@ task runMuffinClicker(type:JavaExec) {
     group 'javafx programs'
     standardInput = System.in
 }
+
+
+task runGridTest(type:JavaExec) {
+    main = "edu.realemj.Examples.GridTest"
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [ '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml'
+    ]
+    dependsOn 'classes'
+    group 'javafx programs'
+    standardInput = System.in
+}
